# PLT_MRT_ARM-RPi2

./: .cproject  .gitignore  .project  LICENSE  README.md
MRT1_VL-13_BreathingLight/: BCM2836_SPI_constants.h  main.c
MRT1_VL-13_TimedBreathingLight/: .cproject  main.c
Templates/Assembler_arm/: .cproject  Assembler_arm Debug.launch  main.S
Templates/CPP_arm/: .cproject  .project  CPP_arm Debug.launch
Templates/CPP_x86/: .cproject  .project  CPP_x86 Debug.launch
Templates/C_arm/: .cproject  .project  C_arm Debug.launch
Templates/C_x86/: .cproject  .project  C_x86 Debug.launch
Templates/U02_01_AssemblyIntro/: U02_01_AssemblyIntro.S
Templates/U02_02_AssemblyFibonachi/: U02_02_AssemblyFibonachi.S
Templates/U07_00_OPC_UA_SensorServer/: main.c  startgdbserver.sh  ua_namespace.c  ua_namespace.h
UA_PiSensorServer/: README.md
UA_PiSensorServer/include/: ua_transport_generated_encoding_binary.h  ua_types_generated.h
UA_TrafficLight/: CMakeLists.txt
UA_TrafficLight/cmake/: Toolchain-mingw32.cmake
UA_TrafficLight/include/: config_global.h
UA_TrafficLight/include/Automaton/: Transition.h
UA_TrafficLight/include/TrafficLight/: TrafficLight.h  TrafficLightBehavior.h
UA_TrafficLight/include/model_pregenerated/: ua_light_namespaceinit_generated.c  ua_light_namespaceinit_generated.h
UA_TrafficLight/include/open62541/: ua_client_highlevel.h  ua_nodeids.h  ua_types_generated.h
UA_TrafficLight/include/ua_mapped_class/: ua_proxies_callback.h  ua_remoteobject.h
UA_TrafficLight/model/: ua_lights.bsd  ua_lights.tt2pro  ua_lights.ua  ua_lights.xml
UA_TrafficLight/src/: main.cpp  ua_lights.cpp  ua_lights_controller.cpp
UA_TrafficLight/src/TrafficLight/: TrafficLight.cpp  TrafficLightBehavior.cpp  TrafficLightOutputFacility.cpp
UA_TrafficLight/src/ua_mapped_class/: ua_mapped_class.cpp  ua_remoteobject.cpp
Uebungen_MRT_1/01_fibonachi_assembler/: .project
Vorlesungsbeispiele/MRT1-VL-9_GPIO27_Toggle_Once/: .cproject  .project  main.S
Vorlesungsbeispiele/MRT1_VL-09_fibonacci_pi/: .cproject  .project
Vorlesungsbeispiele/MRT1_VL-09_fibonacci_rec_pi/: .cproject  .project
Vorlesungsbeispiele/MRT1_VL-09_fibonacci_x86/: .cproject  .project
Vorlesungsbeispiele/MRT1_VL-10_Zeiger/: .cproject  .project  MRT1_VL-10_Zeiger Debug (arm).launch  MRT1_VL-10_Zeiger Debug (x86).launch  main.c
Vorlesungsbeispiele/MRT1_VL-11_Linked_Lists/: .cproject  MRT1_VL-11_Linked_Lists Debug (arm).launch  MRT1_VL-11_Linked_Lists Debug (x86).launch  linked_list.c  linked_list.h  main.c
Vorlesungsbeispiele/MRT1_VL-11_Object_Orientation/: .cproject  .project  MRT1_VL-11_Object_Orientation Debug (arm).launch  MRT1_VL-11_Object_Orientation Debug (x86).launch  debugMsg.h  dog.c  dog.h  example_00.c  human.c  linlist.c  linlist_elem.h  mamal.c
Vorlesungsbeispiele/MRT1_VL-11_Zeiger/: .cproject  .project  linked_lists.c  linked_lists.h  main.c
Vorlesungsbeispiele/MRT1_VL-12_C_MMap_Peripherals/: .cproject  .project  MRT1_VL-12_C_MMap_Peripherals Debug.launch  c_mmap_peripherals.c  libBCM2836.c
Vorlesungsbeispiele/MRT1_VL-12_LinkedLists/: ll.c
Vorlesungsbeispiele/MRT1_VL-12_Linked_Lists/: .cproject  .project  linked_list.c  linked_list_element.c  linked_list_element.h  linked_lists.c  linked_lists.h  main.c
Vorlesungsbeispiele/MRT1_VL-12_Object_Orientation/: .cproject  .project  cobj.h  linlist.h
Vorlesungsbeispiele/MRT1_VL-12_libbcm2835_sharedLib_thirdParty/: MRT1_VL-12_libbcm2835_sharedLib_thirdParty Debug.launch
Vorlesungsbeispiele/MRT1_VL-12_libbcm_staticLibraries/: .project  MRT1_VL-12_libbcm_staticLibraries Debug.launch  main.c
Vorlesungsbeispiele/MRT1_VL-13_BreathingLight/: .project  BCM2836_constants.h  MRT1_VL-13_BreathingLight Debug.launch  libBCM2836.c
Vorlesungsbeispiele/MRT1_VL-13_CMake_Based_Object_Orientation_Code_Analysis/: CMakeLists.txt
Vorlesungsbeispiele/MRT1_VL-13_CMake_Based_Object_Orientation_Code_Analysis/src/: cobj.h  human.h  linlist.c  linlist.h  mamal.h
Vorlesungsbeispiele/MRT1_VL-13_C_MMap_Peripherals/: .cproject  .project  c_mmap_peripherals.c
Vorlesungsbeispiele/MRT1_VL-13_TempCalc_bothlibs/: .project  MRT1_VL-13_TempCalc_bothlibs Debug.launch  c_mmap_peripherals.c
Vorlesungsbeispiele/MRT1_VL-13_TempLightPWM/: .cproject  .project  BCM2836.h  MRT1_VL-13_TempLightPWM Debug.launch  main.c
Vorlesungsbeispiele/MRT1_VL-13_TimedBreathingLight/: .project  MRT1_VL-13_TimedBreathingLight Debug.launch  main.c
Vorlesungsbeispiele/MRT1_VL-13_libbcm2835_sharedLib_thirdParty/: .cproject  .project
Vorlesungsbeispiele/MRT1_VL-13_libbcm_staticLibraries/: .cproject  .project  main.c
Vorlesungsbeispiele/MRT1_VL-14_CMake_Based_Object_Orientation_Code_Analysis/: CMakeLists.txt
Vorlesungsbeispiele/MRT1_VL-14_TempCalc_bothlibs/: c_mmap_peripherals.c
Vorlesungsbeispiele/MRT2_VL-6_Ampel_ohne_IoT_CMakeScaffold/: CMakeLists.txt  README.md
Vorlesungsbeispiele/MRT2_VL-8_Ampel_mit_OPC_UA_CMakeScaffold/: CMakeLists.txt  README.md
old/Exercises_WS16_17/Dynamic_Objects/ObjectOrientation/: CMakeLists.txt
old/Exercises_WS16_17/Dynamic_Objects/ObjectOrientation/Debug/: makefile
old/Exercises_WS16_17/Dynamic_Objects/ObjectOrientation/Debug/examples/: subdir.mk
old/Exercises_WS16_17/Dynamic_Objects/ObjectOrientation/Debug/src/: subdir.mk
old/Exercises_WS16_17/Dynamic_Objects/ObjectOrientation/src/: dog.c  linlist_elem.c
old/Exercises_WS16_17/Dynamic_Objects/ObjectOrientation/tests/: test_linlist.c
ua_lights/: CMakeLists.txt  build_on_pi_g++4.6_dynamic  build_on_x86_g++4.9_dynamic
ua_lights/include/: Light.h  Opc_ua.h  PedestrianLight.h  ThreadedSensor.h  TrafficLight.h  bcm2835.h  config.h  setLight.h
ua_lights/include/open62541/: ua_namespaceinit_generated.h  ua_nodeids.h  ua_transport_generated.h  ua_transport_generated_encoding_binary.h  ua_types.h  ua_types_generated.h  ua_types_generated_encoding_binary.h
ua_lights/include/open62541/src/: ua_types_encoding_binary.h
ua_lights/scr/: Light.cpp  Opc_ua.cpp  TrafficLight.cpp  setLight.c
ua_lights/src/: PedestrianLight.cpp  ThreadedSensor.cpp  main.cpp
(+459 files in other folders)
